Grease Pencil crashes Blender #62297

Closed
opened 2019-03-07 09:40:03 +01:00 by Dan Pastean · 11 comments

System Information
Operating system: windows 10
Graphics card: RX580, and nvidia quadro k4000

Blender Version
latest build 06.03.2019
Worked: (optional)

Short description of error
Blender crashes when drawing with dotted line

Exact steps for others to reproduce the error

  • open default 2d animation template;
  • draw a line (no matter the style, layer or brush)
  • change the line type from line to dot (and the line changes ok)
  • draw somethig while the line is set to dot and it crashes instant
**System Information** Operating system: windows 10 Graphics card: RX580, and nvidia quadro k4000 **Blender Version** latest build 06.03.2019 Worked: (optional) **Short description of error** Blender crashes when drawing with dotted line **Exact steps for others to reproduce the error** - open default 2d animation template; - draw a line (no matter the style, layer or brush) - change the line type from line to dot (and the line changes ok) - draw somethig while the line is set to dot and it crashes instant
Author

Added subscriber: @Pastean_Narcis_Dan

Added subscriber: @Pastean_Narcis_Dan

Added subscriber: @antoniov

Added subscriber: @antoniov

I fixed this error yesterday late. Are you using today version?

Edited: I have seen builbot of yesterday did not compile for 64bits version. Wait for tomorrow build.

I fixed this error yesterday late. Are you using today version? Edited: I have seen builbot of yesterday did not compile for 64bits version. Wait for tomorrow build.
Antonio Vazquez self-assigned this 2019-03-07 10:11:12 +01:00
This is the commit https://developer.blender.org/rBb39985eddb2a2182497f457daeb3125d4862e0a2
Author

the latest 64 bit version of Blender is on the 6th, ive just nou noticed the 32 bit is newer.
i cant run the 32 bit to check, the build wont open

the latest 64 bit version of Blender is on the 6th, ive just nou noticed the 32 bit is newer. i cant run the 32 bit to check, the build wont open
Author

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Hi, latest build of Blender crashes again if the user attempts to draw a dotted line, bug fixed a week ago, managed to find its way into the daily build again.

Hi, latest build of Blender crashes again if the user attempts to draw a dotted line, bug fixed a week ago, managed to find its way into the daily build again.

Yes, the bug is back...I will fix it.

Yes, the bug is back...I will fix it.

This issue was referenced by 98af74b936

This issue was referenced by 98af74b9366b0e1006333fe9e493f3ea50ac952a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62297
No description provided.