Fix T62297: Grease Pencil dots drawing crashes Blender

Fix again this bug. Maybe it was introduced when change how wireframe mode by object works.